hphp/hack/test/typecheck/shape_idx4.php.exp
File "shape_idx4.php", line 7, characters 15-16:
Invalid argument (Typing[4110])
File "Shapes.hhi", line 35, characters 36-45:
Expected shape(...)
File "shape_idx4.php", line 6, characters 15-17:
But got int
